--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       <link rel="stylesheet" href="css/style.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="js/main.js" charset="utf-8"></script>
-
    </head>
    <body>
       <nav>
@@ -16,93 +15,98 @@
             <div id="logo">
                <img src="img/logo.svg" alt="">
             </div>
-            <div class="list-inline nav-left">
-               <a id="bold" href="#">Personale</a>
+            <div id="left-menu">
+               <a class="active" href="#">Personale</a>
                <a href="#">Business</a>
             </div>
             <div id="buttons">
                <a id="login" href="#">Accedi</a>
                <a id="download" href="#">Scarica l'app</a>
             </div>
-            <div class="list-inline nav-right">
-               <div class="nav-right__el">
+            <ul id="right-menu">
+               <li>
                   <a href="#">Funzionalità</a>
-                  <div class="dropdown ">
-                     hi
+                  <div id="funzionalita" class="dropdown-content">
+                     <div class="special">
+                        <ul>
+                           <li>CONTO</li>
+                           <li><a href="#">Budget e statistiche</a></li>
+                           <li><a href="#">Carte</a></li>
+                           <li><a href="#">Conto Junior</a></li>
+                        </ul>
+
+                        <ul>
+                           <li>INVESTIMENTI E RISPARMI</li>
+                           <li><a href="#">Azioni</a></li>
+                           <li><a href="#">Crypto</a></li>
+                           <li><a href="#">Prodotti</a></li>
+                           <li><a href="#">Salvadanai</a></li>
+                           <li class="to-add"><a href="#">Salvadanaio deposito <span>PROSSIMAMENTE</span></a></li>
+                        </ul>
+
+                        <ul>
+                           <li>PAGAMENTI</li>
+                           <li><a href="#">Trasferimento di denaro</a></li>
+                           <li><a href="#">Fatture di gruppo</a></li>
+                           <li><a href="#">Abbonamenti</a></li>
+                        </ul>
+
+                        <ul>
+                           <li>EXTRA</li>
+                           <li><a href="#">Donazioni</a></li>
+                           <li><a href="#">Assicurazione nazionale</a></li>
+                           <li><a href="#">Assicurazione del dispositivo</a></li>
+                           <li class="to-add"><a href="#">Rewards <span>PROSSIMAMENTE</span></a></li>
+                        </ul>
+                     </div>
                   </div>
-               </div>
-               <div class="nav-right__el">
+               </li>
+
+               <li>
                   <a href="#">Abbonamenti</a>
-                  <ul class="dropdown">
-                     <li>
-                        <a href="">Standard</a>
-                     </li>
-                     <li>
-                        <a href="">Premium</a>
-                     </li>
-                     <li>
-                        <a href="">Metal</a>
-                     </li>
-                     <li>
-                        <a href="">Confronta i piani</a>
-                     </li>
-                  </ul>
-               </div>
-               <div class="nav-right__el">
+                  <div class="dropdown-content">
+                     <ul>
+                        <li><a href="">Standard</a></li>
+                        <li><a href="">Premium</a></li>
+                        <li><a href="">Metal</a></li>
+                        <li><a href="">Confronta i piani</a></li>
+                     </ul>
+                  </div>
+               </li>
+               <li>
                   <a href="#">Chi siamo</a>
-                  <ul class="dropdown">
-                     <li>
-                        <a href="">Chi siamo</a>
-                     </li>
-                     <li>
-                        <a href="">Blog</a>
-                     </li>
-                     <li>
-                        <a href="">Leadership</a>
-                     </li>
-                     <li>
-                        <a href="">Affiliate</a>
-                     </li>
-                     <li>
-                        <a href="">Influencer</a>
-                     </li>
-                     <li>
-                        <a href="">Lavora con noi</a>
-                     </li>
-                     <li>
-                        <a href="">Cultura</a>
-                     </li>
-                     <li>
-                        <a href="">Diversità e inclusione</a>
-                     </li>
-                     <li>
-                        <a href="">Contatto</a>
-                     </li>
-                  </ul>
-               </div>
-               <div class="nav-right__el">
+                  <div class="dropdown-content">
+                     <ul>
+                        <li><a href="">Chi siamo</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Leadership</a></li>
+                        <li><a href="">Affiliate</a>
+                        </li><li><a href="">Influencer</a></li>
+                        <li><a href="">Lavora con noi</a></li>
+                        <li><a href="">Cultura</a></li>
+                        <li><a href="">Diversità e inclusione</a></li>
+                        <li><a href="">Contatto</a></li>
+                     </ul>
+                  </div>
+               </li>
+               <li>
                   <a href="#">Aiuto</a>
-                  <ul class="dropdown">
-                     <li>
-                        <a href="">Centro assistenza</a>
-                     </li>
-                     <li>
-                        <a href="">Community</a>
-                     </li>
-                     <li>
-                        <a href="">Sicurezza</a>
-                     </li>
-                     <li>
-                        <a href="">Stato del sistema</a>
-                     </li>
-                     <li>
-                        <a href="">API sviluppatore</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
+                  <div class="dropdown-content">
+                     <ul>
+                        <li><a href="">Centro assistenza</a></li>
+                        <li><a href="">Community</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Stato del sistema</a></li>
+                        <li><a href="">API sviluppatore</a></li>
+                     </ul>
+                  </div>
+               </li>
+            </ul>
          </div>
       </nav>
+
+
+
 
    </body>
 </html>
